--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Marek",
+  "author": "https://github.com/MarekAkram",
   "license": "ISC",
   "devDependencies": {
     "dead-server": "^1.0.9"
